# devops

./: .gitignore  README.md
automation/: MAKE.md  README.md  SOFTWARE.LIBRARIES.md
automation/autotools/jupiter/: Makefile.am  README.md  configure.ac
automation/autotools/jupiter/common/: README.md
automation/autotools/jupiter/include/: README.md
automation/autotools/jupiter/libjup/: README.md
automation/autotools/jupiter/src/: Makefile.am  README.md
automation/autotools/jupiter/src/modules/hithere/: README.md
automation/autotools/jupiter/tests/: README.md
databases/: README.md
learning-helm/: README.md
learning-kubernetes/: EFK-STACK-TUTORIAL.md  README.md  analytics-secret-tls.yml  cloud-example-volume.yml  deployment.yaml  efk-cluster-kubeconfig.yaml  mongo-express-ingress.yml  mongo-express.yml  mongo-secret.yml  subdomain-ingress.yml
logging/: README.md
mssql-server/: README.md
mssql-sql-server/: piping-sql-scripts-sqlcmd.sh  restoring-database.sh
mysql-server/: README.md
postgresql-server/: README.md
provisioning-apache-php-mysql-centos/: Vagrantfile
provisioning-kubernetes/: Vagrantfile
provisioning-wordpress-docker/: docker-compose-host-network.yml  docker-compose.yml
security/: README.md  create-local-ca-ssl.sh
utility-scripts/: README.md  analyse-styles.sh  docker-run-commands-wordpress-php-xdebug.sh  docker-run-portainer.sh  install-headless-chrome-debian.sh  list-used-ports-2.sh  list-used-ports.sh  pdf-to-text-zipf.sh  show-file-path-of-an-installed-app.sh  wget.sh
virtualization/: README.md
(+65 files in other folders)
