# This directs aclocal to look in the m4 directory for macros.
ACLOCAL_AMFLAGS = -I m4

# Do not include AUTHORS, NEWS, or ChangeLog in the distribution
DIST_SUBDIRS = $(SUBDIRS)
EXTRA_DIST =

# Prevent automake from looking for these files
MAINTAINERCLEANFILES = ChangeLog NEWS AUTHORS

# Define subdirectories for the build
SUBDIRS = common include libjup src tests