# This directs aclocal to look in the m4 directory for macros.
ACLOCAL_AMFLAGS = -I m4

# Do not include AUTHORS, NEWS, or ChangeLog in the distribution
EXTRA_DIST =

# If you want to define them as empty files to avoid errors
# touch AUTHORS NEWS ChangeLog

# Define subdirectories for the build
SUBDIRS = common include libjup src tests